[package]
name = "lumi"
version = "0.1.0"
authors = ["Lencerf <changyuan.lv@gmail.com>"]
edition = "2018"
license = "MIT"

[dependencies]
logos = "0.12.0"
rust_decimal = {version = "1.10.3"}
chrono = {version = "0.4", features = ["serde"]}
num_cpus = "1.13.0"
clap = {version = "2", features = ["wrap_help", "suggestions"]}
serde = {version = "1.0", features = ["derive", "rc"], optional = true}

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "parse_bench"
harness = false
