[package]
name = "lumi-cli"
version = "0.1.0"
authors = ["Lencerf <changyuan.lv@gmail.com>"]
edition = "2021"
license = "MIT"
description = "A cli-tool for double-entry accounting"
homepage = "https://github.com/Lencerf/lumi"
repository = "https://github.com/Lencerf/lumi"
readme = "README.md"
documentation = "https://docs.rs/lumi"

[dependencies]
lumi ={ version = "*", path = "../lumi", features = ["serde"]}
clap = {version = "4", features = ["derive", "suggestions"]}
rust_decimal = {version = "1.29.1"}
chrono = {version = "0.4", features = ["serde"]}
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde_json = "1"
mime_guess = "2"
include_dir = "0.6"
headers = "0.3.8"
log = "0.4"
pretty_env_logger = "0.3"

[[bin]]
name = "lumi"
path = "src/lumi.rs"
