[package]
name = "lumi-ui"
version = "0.1.0"
edition = "2024"
authors = ["Lencerf <changyuan.lv@gmail.com>"]
license = "MIT"

[dependencies]
leptos = { version = "0.8", features = ["csr"] }
leptos_meta = { version = "0.8" }
leptos_router = { version = "0.8" }
console_log = "1"
log = "0.4"
console_error_panic_hook = "0.1"
serde = "1.0.219"
gloo-net = "0.6.0"
gloo-utils = "0.2.0"
lumi = { version = "*", path = "../lumi", features = ["serde"] }

[dev-dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3"
web-sys = { version = "0.3", features = ["Document", "Window"] }
