[package]
name = "lumi-web"
version = "0.1.0"
authors = ["Lencerf <changyuan.lv@gmail.com>"]
edition = "2021"
license = "MIT"

[dependencies]
yew = { version = "0.20", features = ["csr"] }
yew-router = "0.17"
reqwest = { version = "0.11", features = ["json"] }
lumi = { version = "*", path = "../lumi", features = ["serde"]}
anyhow = "1.0"
serde = "1.0"
serde_urlencoded = "0.7.1"
chrono = "0.4"
rust_decimal = "1.29.1"
wasm-logger = "0.2"
log = "0.4"
gloo-utils = "0.1.6"