[package]
name = "lumi-web"
version = "0.2.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
gloo-utils = "0.2.0"
log = "0.4"
lumi = { path = "../lumi", version = "*", features = ["serde"] }
reqwest = { version = "0.13", features = ["json"] }
rust_decimal = "1.41.0"
serde = "1.0"
serde_urlencoded = "0.7.1"
wasm-logger = "0.2"
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.20"
