[package]
name = "lumi"
version = "0.2.0"
edition = "2024"
description = "A library for processing text-based ledger files."
documentation = "https://docs.rs/lumi"
readme = "../README.md"
homepage = "https://github.com/Lencerf/lumi"
repository = "https://github.com/Lencerf/lumi"
license = "MIT"

[lib]
name = "lumi"
path = "src/lib.rs"

[[bench]]
harness = false
name = "parse_bench"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
getset = "0.1.2"
logos = "0.12.1"
num_cpus = "1.15.0"
rust_decimal = { version = "1.40.0" }
serde = { version = "1.0", features = ["derive", "rc"], optional = true }

[dev-dependencies]
criterion = "0.8"
